test update to extension

--- a/_extensions/courseformat/theme.scss
+++ b/_extensions/courseformat/theme.scss
@@ -5,7 +5,7 @@
 /*-- scss:defaults --*/
 
 // UoC green colour scheme
-$navbar-bg: #003a41;
+$navbar-bg: red;//#003a41;
 $navbar-fg: white;
 $body-color: black;
 $link-color: #003a41;
