--- a/_extensions/courseformat/theme.scss
+++ b/_extensions/courseformat/theme.scss
@@ -4,8 +4,12 @@
 
 /*-- scss:defaults --*/
 
-// UoC green colour scheme
-$navbar-bg: #003a41;
+// UoC green colour scheme (from dark to light)
+// #003a41
+// #0c5963
+// #106470
+// #28828A
+$navbar-bg: #106470;
 $navbar-fg: white;
 $body-color: black;
 $link-color: #003a41;
