--- a/_extensions/courseformat/theme.scss
+++ b/_extensions/courseformat/theme.scss
@@ -62,3 +62,10 @@ div.sidebar-item-container .active {
 .nav-footer, .nav-footer-left, .nav-footer-right, .nav-footer-center {
   font-size: 1rem;
 }
+
+// figure display
+.figure {
+  text-align: center;
+  text-indent: 0;
+  border-bottom: 1px solid #dee2e6;
+}
