add course title to navbar

--- a/_extensions/courseformat/theme.scss
+++ b/_extensions/courseformat/theme.scss
@@ -69,3 +69,7 @@ div.sidebar-item-container .active {
   text-indent: 0;
   border-bottom: 1px solid #dee2e6;
 }
+
+.navbar-title {
+  padding-left: 20px;
+}
