add details about exercise levels

--- a/_extensions/courseformat/theme.scss
+++ b/_extensions/courseformat/theme.scss
@@ -70,13 +70,12 @@ div.sidebar-item-container .active {
   border-bottom: 1px solid #dee2e6;
 }
 
+// course title
 .navbar-title {
   padding-left: 20px;
 }
 
-
 // Download button
-
 // Style buttons
 .btn {
   background-color: #106470;
