--- a/_extensions/courseformat/theme.scss
+++ b/_extensions/courseformat/theme.scss
@@ -1,8 +1,15 @@
 /*-- Importing fa icons --*/
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
 
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&display=swap');
 
-/*-- scss:defaults --*/
+/*-- quarto variables --*/
+// https://quarto.org/docs/output-formats/html-themes.html#sass-variables
+
+// font designed for accessibility
+$font-family-sans-serif: "Atkinson Hyperlegible Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-family-monospace: "Atkinson Hyperlegible Mono", monospace;
 
 // UoC green colour scheme (from dark to light)
 // #003a41
@@ -13,12 +20,6 @@ $navbar-bg: #106470;
 $navbar-fg: white;
 $body-color: black;
 $link-color: #003a41;
-
-//make font size a bit larger than default
-// $font-size-root: 1.2rem;
-// $toc-font-size: 0.9rem;
-// $sidebar-font-size: 0.9rem;
-// $sidebar-font-size-section: 0.9rem !default;
 
 //tweak callout colours to match our scheme
 //based on https://coolors.co/28828a-106470-003a41-d62828-f77f00
@@ -175,4 +176,30 @@ div.callout-hint.callout {
 
 div.callout-hint.callout-style-default > .callout-header {
   background-color: #f9f9f8;
+}
+
+// Custom output code block
+pre.output {
+    @extend .sourceCode;
+    background-color: #f5f5f5;  /* light grey background */
+    padding-top: 1.5em; /* leave space for label */
+}
+
+/* Add "Output" label in the top-right corner */
+pre.output::before {
+    content: "Output";
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #106470;  /* UoC dark green */
+    color: white;
+    font-size: 0.75em;
+    font-family: sans-serif;
+    padding: 2px 6px;
+    border-bottom-left-radius: 4px;
+}
+
+pre.text {
+    @extend .sourceCode;
+    background-color: #f5f5f5;  /* light grey background */
 }
